DuPont DevSB/src/objects/Loop__Document_Request__c.object
<CustomObject>
    <description>Document Queue for Document Packages</description>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case sensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Loop__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Document Requests</relationshipLabel>
        <relationshipName>Document_Queue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loop__Document_Id__c</fullName>
        <label>Document Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__Document_Name_Link__c</fullName>
        <formula>IF(Loop__Document_Id__c &lt;&gt; &quot;&quot;, HYPERLINK(&quot;/servlet/servlet.FileDownload?file=&quot; &amp; Loop__Document_Id__c , Loop__Document_Name__c, &quot;_blank&quot;),  CASE( Loop__Status__c , &quot;Pending&quot;, &quot;&quot;, &quot;Error&quot;, &quot;&quot;, Loop__Document_Name__c) )</formula>
        <label>Document Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__Document_Name__c</fullName>
        <label>Document Name (text)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__Email_Link__c</fullName>
        <label>Email Link</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Loop__Email__c</fullName>
        <formula>IF (Loop__Email_Link__c &lt;&gt; &quot;&quot;, HYPERLINK(Loop__Email_Link__c, &quot;Email&quot;,&quot;_self&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__Error_Id__c</fullName>
        <label>Error Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__Error_Message__c</fullName>
        <label>Error Message</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Loop__Job_Queue_Id__c</fullName>
        <label>Job Queue Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__LOOP__c</fullName>
        <formula>IF( Loop__Document_Id__c &lt;&gt;&quot;&quot;, HYPERLINK(&quot;/apex/loop__loopit?docIds=&quot; &amp; Loop__Document_Id__c, &quot;LOOP&quot;,&quot;_self&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LOOP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__Object_Id__c</fullName>
        <label>Object Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Looped</fullName>
                </value>
                <value>
                    <fullName>Emailed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Document Request</label>
    <listViews>
        <fullName>Loop__All</fullName>
        <columns>NAME</columns>
        <columns>Loop__Document_Name_Link__c</columns>
        <columns>Loop__Email__c</columns>
        <columns>Loop__LOOP__c</columns>
        <columns>Loop__Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Loop__Complete</fullName>
        <columns>NAME</columns>
        <columns>Loop__Document_Name_Link__c</columns>
        <columns>Loop__Contact__c</columns>
        <columns>Loop__Email__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Loop__Status__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filters>
        <label>Complete</label>
    </listViews>
    <listViews>
        <fullName>Loop__Error</fullName>
        <columns>NAME</columns>
        <columns>Loop__Error_Id__c</columns>
        <columns>Loop__Error_Message__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Loop__Status__c</field>
            <operation>equals</operation>
            <value>Error</value>
        </filters>
        <label>Error</label>
    </listViews>
    <listViews>
        <fullName>Loop__Fulfilled</fullName>
        <columns>NAME</columns>
        <columns>Loop__Document_Name_Link__c</columns>
        <columns>Loop__Contact__c</columns>
        <columns>Loop__Email__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Loop__Status__c</field>
            <operation>equals</operation>
            <value>Looped,Emailed,Merged</value>
        </filters>
        <label>Fulfilled</label>
    </listViews>
    <listViews>
        <fullName>Loop__Pending</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Loop__Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <label>Pending</label>
    </listViews>
    <nameField>
        <displayFormat>D-{000000}</displayFormat>
        <label>Document Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Drawloop Document Queue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>